Fixed content header spacing in desktop

--- a/dev/css/component/content-header.css
+++ b/dev/css/component/content-header.css
@@ -80,5 +80,7 @@
         line-height: 20px;
     }
 
-
+    .content__action .content__action--copy{
+        margin-bottom:40px;
+    }
 }
